fix missing drop shadow because of z-index

--- a/client/src/styles/parts/Header.css
+++ b/client/src/styles/parts/Header.css
@@ -1,4 +1,6 @@
 .root {
+    position: relative;
+    z-index: 1;
     border: 0 !important;
     border-radius: 0 !important;
     margin: 0 !important;
